--- a/TheMovieApp/Features/Main.storyboard
+++ b/TheMovieApp/Features/Main.storyboard
@@ -53,18 +53,68 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="6bB-AI-cb1"/>
+                    <navigationItem key="navigationItem" id="6bB-AI-cb1">
+                        <barButtonItem key="leftBarButtonItem" title="Archive" id="8ET-W5-Bm7"/>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="btnArchive" destination="8ET-W5-Bm7" id="rvw-ds-uVQ"/>
                         <outlet property="collectionView" destination="pRK-0U-Tcd" id="dKT-iS-Jak"/>
                         <outlet property="lblNotice" destination="ec0-by-2Bu" id="Bi4-Sh-Qa9"/>
                         <outlet property="searchBar" destination="ha0-gl-5QG" id="fJ9-W4-daw"/>
                         <segue destination="BuQ-9I-gd6" kind="show" identifier="showMovieDetail" id="K8t-fN-LwG"/>
+                        <segue destination="jMJ-6p-ifg" kind="show" identifier="showArchive" id="n8p-dD-z7f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
+        </scene>
+        <!--Archive -->
+        <scene sceneID="Fub-t5-Nel">
+            <objects>
+                <viewController storyboardIdentifier="ArchiveViewController" title="Archive " useStoryboardIdentifierAsRestorationIdentifier="YES" id="jMJ-6p-ifg" customClass="ArchiveViewController" customModule="TheMovieApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dIE-ft-mc7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="V8i-ig-J1E">
+                                <rect key="frame" x="0.0" y="92" width="414" height="721"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VLe-nc-sjY">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <label key="backgroundView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6Ut-Ue-y29">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="721"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" systemColor="tertiaryLabelColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cxG-i7-GW3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="V8i-ig-J1E" firstAttribute="top" secondItem="dIE-ft-mc7" secondAttribute="topMargin" id="41z-Iq-fxb"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="V8i-ig-J1E" secondAttribute="bottom" id="6aO-1v-as2"/>
+                            <constraint firstItem="cxG-i7-GW3" firstAttribute="trailing" secondItem="V8i-ig-J1E" secondAttribute="trailing" id="M2m-r0-zQr"/>
+                            <constraint firstItem="V8i-ig-J1E" firstAttribute="leading" secondItem="cxG-i7-GW3" secondAttribute="leading" id="zrY-VZ-boZ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Qk9-SI-QD2"/>
+                    <connections>
+                        <outlet property="collectionView" destination="V8i-ig-J1E" id="fNi-so-PWS"/>
+                        <outlet property="lblNotice" destination="6Ut-Ue-y29" id="yF3-IJ-0ZU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JbQ-70-qf9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="874"/>
         </scene>
         <!--Movie Detail View Controller-->
         <scene sceneID="lbx-lG-zfP">
